<resources>
    <string name="app_name">Fix</string>
    <string name="registrar">Registrar</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="id">Documento de Identidad</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="cliente">CLIENTE</string>
    <string name="fotoperfil">Foto de perfil</string>
    <string name="perfil_usuario">PERFIL DE USUARIO</string>
    <string name="editar">EDITAR</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="electro">Image</string>
    <string name="cell">Image</string>
    <string name="pc">Image</string>
    <string name="sonido">Image</string>
    <string name="impresoras">Image</string>
    <string name="televisor">Image</string>
    <string name="accesorios">Image</string>
    <string name="electrodomesticos">Electrodomésticos</string>
    <string name="celulares">Celulares</string>
    <string name="computadores">Computadores</string>
    <string name="sonidos">Equipos de Sonido</string>
    <string name="impresora">Impresoras y faxes</string>
    <string name="televisores">Televisores</string>
    <string name="accesorio">Accesorios y más</string>
    <string name="cerrar">Cerrar sesión</string>
    <string name="titulocategorias">CATEGORÍAS</string>
    <string name="title_activity_modulo_ac">ModuloAcActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="crear_solicitud">Nueva solicitud</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>