<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".RegistroCliente">

    <EditText
        android:id="@+id/editTextID"
        android:layout_width="207dp"
        android:layout_height="39dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="163dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="33dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:text="@string/id"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNombres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextContrasena"
        android:layout_width="207dp"
        android:layout_height="39dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:text="@string/contrasena"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegistrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCorreo" />

    <EditText
        android:id="@+id/editTextCorreo"
        android:layout_width="207dp"
        android:layout_height="39dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="103dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:text="@string/correo"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextApellidos" />

    <EditText
        android:id="@+id/editTextApellidos"
        android:layout_width="207dp"
        android:layout_height="39dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="103dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:text="@string/apellidos"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombres" />

    <EditText
        android:id="@+id/editTextNombres"
        android:layout_width="207dp"
        android:layout_height="39dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="102dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:text="@string/nombres"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextID" />

    <Button
        android:id="@+id/buttonRegistrar"
        android:layout_width="277dp"
        android:layout_height="58dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="328dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="143dp"
        android:text="@string/registrar"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextID"
        tools:text="Registar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="178dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="179dp"
        android:layout_marginBottom="58dp"
        android:text="@string/cliente"
        app:layout_constraintBottom_toTopOf="@+id/editTextID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>