<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilActivity">

    <ImageView
        android:id="@+id/imgPerfil"
        android:layout_width="108dp"
        android:layout_height="103dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/fotoperfil"
        android:src="@drawable/ic_perfil"
        app:layout_constraintBottom_toTopOf="@+id/text_perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[3]" />

    <TextView
        android:id="@+id/text_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil_usuario"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPerfil" />

    <TextView
        android:id="@+id/textUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="1dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/text_perfil"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="346dp"
        android:layout_height="466dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUsuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputContra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:textColor="@color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonEditar"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:gravity="center|center_horizontal"
                android:text="@string/editar"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:iconTint="#FFFFFF"
                tools:text="Editar" />

            <Button
                android:id="@+id/buttonAceptar"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:gravity="center|center_horizontal"
                android:text="@string/aceptar"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:iconTint="#FFFFFF"
                tools:text="ACEPTAR" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>